<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:padding="20dp">

    <TextView
        android:id="@+id/pause_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/PAUSE"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Resume button -->
    <Button
        android:id="@+id/resume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_back_button"
        android:contentDescription="Resume the game"
        android:text="@string/Resume"
        android:textColor="#FFFFFF" />

    <!-- Restart button -->
    <Button
        android:id="@+id/restart_button"
        android:text="@string/Restart"
        android:paddingStart="10dp"

        android:textColor="#FFFFFF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:contentDescription="Restart the game" />

    <!-- Bouton Settings -->
    <Button
        android:id="@+id/settings_button"
        android:text="@string/Settings"
        android:paddingStart="10dp"

        android:textColor="#FFFFFF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:contentDescription="Open settings" />

    <!-- Bouton Home -->
    <Button
        android:id="@+id/home_button"
        android:text="@string/Home"
        android:paddingStart="10dp"

        android:textColor="#FFFFFF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:contentDescription="Return to home screen" />

</LinearLayout>
