<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/purple"
    android:padding="20dp"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_close"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:contentDescription="Fermer"
            android:clickable="true"
            android:focusable="true" />


    </RelativeLayout>

    <TextView
        android:fontFamily="@font/font6"

        android:text="@string/Connexion"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NomUtilisateur"
        app:startIconDrawable="@android:drawable/ic_menu_myplaces"> <!-- Icône utilisateur -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:gravity="start|center_vertical"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Motdepasse"
        app:startIconDrawable="@android:drawable/ic_lock_lock"
        app:endIconMode="password_toggle">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPassword"/>
</com.google.android.material.textfield.TextInputLayout>




    <Button
        android:fontFamily="@font/font6"

        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_back_button"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/Connexion"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"/> <!-- Centre le bouton -->
    <TextView
        android:fontFamily="@font/font6"

        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Donthaveoneyet"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_gravity="center"/>
    <TextView
        android:fontFamily="@font/font6"

        android:id="@+id/txt_o2r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/SignUp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_gravity="center"/>


    <TextView
        android:fontFamily="@font/font6"

        android:id="@+id/go_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_back_button"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/Créeruncompte"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"/> <!-- Centre le bouton -->



</LinearLayout>
