<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/purple"
    android:padding="20dp">


    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />


    <TextView
        android:id="@+id/titleText"
        android:text ="@string/Startthetutorialbyselectingatrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:fontFamily="@font/font6"
        android:textStyle="bold" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/songsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>


    <TextView
        android:fontFamily="@font/font6"
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="gone"
        android:paddingTop="8dp" />


    <Button
        android:id="@+id/testButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TESTER"
        android:enabled="false"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:elevation="6dp"
        android:fontFamily="@font/font6"
        android:background="@drawable/song_item_background" />
    <Button
        android:id="@+id/skipButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SkipTutorial"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:fontFamily="@font/font6"
        android:layout_marginTop="12dp"
        android:background="@drawable/song_item_background" />


</LinearLayout>
